--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,15 +2,22 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.omar.find_out_nearest_covid_patient">
 
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-        android:maxSdkVersion="18" />
-    <uses-permission android:name="android.permission.CAMERA"
-        android:required="true"
-        android:requiredFeature="true"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
 
-    <uses-feature android:name="android.hardware.camera"
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="18" />
+    <uses-permission
+        android:name="android.permission.CAMERA"
+        android:required="true"
+        android:requiredFeature="true" />
+
+    <uses-feature
+        android:name="android.hardware.camera"
         android:required="true" />
     <uses-feature
         android:name="android.hardware.camera.any"
@@ -36,9 +43,14 @@
             android:name=".Activity.CreateAccountActivity"
             android:exported="true" />
         <activity
+            android:name=".Activity.ProfileActivity"
+            android:exported="true" />
+        <activity
             android:name=".Activity.MainActivity"
             android:exported="true" />
-        <activity android:name=".Activity.PhoneAuthenticationActivity" />
+        <activity
+            android:name=".Activity.PhoneAuthenticationActivity"
+            android:exported="true"/>
         <activity android:name=".Activity.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -46,6 +58,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service android:name=".Service.LocationService"
+            android:enabled="true"
+            android:exported="false"
+           />
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyA9oiLFTpva7H1oTaaiXro8f9NqRj3Xd2s" />
     </application>
 
 </manifest>
